attempting to build website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,31 @@
----
----
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{aquino_toxic_2021,
+	title = {Toxic {Comment} {Detection}: {Analyzing} the {Combination} of {Text} and {Emojis}},
+	shorttitle = {Toxic {Comment} {Detection}},
+	url = {https://ieeexplore.ieee.org/document/9637812},
+	doi = {10.1109/MASS52906.2021.00097},
+	abstract = {Detection of toxicity in online commentary is a growing branch of Natural Language Processing (NLP). Most research in the area rely only on text-based toxic comment detection. We propose a machine learning approach for detecting the toxicity of a comment by analyzing both the text and the emojis within the comment. Our approach utilizes word embeddings derived from GloVe and emoji2vec to train a bidirectional Long Short Term Memory (biLSTM) model. We also create a new labeled dataset with comments with text and emojis. The accuracy score of our model on preliminary data is 0.911.},
+	urldate = {2023-12-13},
+	booktitle = {2021 {IEEE} 18th {International} {Conference} on {Mobile} {Ad} {Hoc} and {Smart} {Systems} ({MASS})},
+	author = {Aquino, Michael and Ortiz, Yasiris and Rashid, Arif and Tumlin, Anne M. and Artan, N. Sertac and Dong, Ziqian and Gu, Huanying},
+	month = oct,
+	year = {2021},
+	note = {ISSN: 2155-6814},
+	pages = {661--662},
+	file = {IEEE Xplore Abstract Record:/Users/annetumlin/Zotero/storage/NX97XPJS/9637812.html:text/html;IEEE Xplore Full Text PDF:/Users/annetumlin/Zotero/storage/AXM3JCJD/Aquino et al. - 2021 - Toxic Comment Detection Analyzing the Combination.pdf:application/pdf},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{olsen_visibility_2021,
+	title = {A {Visibility} {Roadmap} {Sampling} {Approach} for a {Multi}-{Robot} {Visibility}-{Based} {Pursuit}-{Evasion} {Problem}},
+	url = {https://ieeexplore.ieee.org/abstract/document/9562021},
+	doi = {10.1109/ICRA48506.2021.9562021},
+	abstract = {Given a two-dimensional polygonal space, the multi-robot visibility-based pursuit-evasion problem tasks several pursuer robots with the goal of establishing visibility with an arbitrarily fast evader. The best known complete algorithm for this problem takes time doubly exponential in the number of robots. However, sampling-based techniques have shown promise in generating feasible solutions in these scenarios. One of the primary drawbacks to employing existing sampling-based methods is that existing algorithms have long execution times and high failure rates for complex environments. This paper addresses that limitation by proposing a new algorithm that takes an environment as its input and returns a joint motion strategy which ensures that the evader is captured by one of the pursuers. Starting with a single pursuer, we sequentially construct Sample-Generated Pursuit-Evasion Graphs to create such a joint motion strategy. This sequential graph structure ensures that our algorithm will always terminate with a solution, regardless of the complexity of the environment. We describe an implementation of this algorithm and present quantitative results that show significant improvement in comparison to the existing algorithm.},
+	urldate = {2023-12-13},
+	booktitle = {2021 {IEEE} {International} {Conference} on {Robotics} and {Automation} ({ICRA})},
+	author = {Olsen, Trevor and Tumlin, Anne M. and Stiffler, Nicholas M. and O’Kane, Jason M.},
+	month = may,
+	year = {2021},
+	note = {ISSN: 2577-087X},
+	pages = {7957--7964},
+	file = {IEEE Xplore Full Text PDF:/Users/annetumlin/Zotero/storage/CC2H5IX4/Olsen et al. - 2021 - A Visibility Roadmap Sampling Approach for a Multi.pdf:application/pdf},
 }
